--- a/JavaScript_Assignment/index.html
+++ b/JavaScript_Assignment/index.html
@@ -9,7 +9,7 @@
     <!-- <script src="./ch_1_2_3/task1.js"></script> -->
     <!-- <script src="./ch_5_6_7/task.js"></script> -->
     <!-- <script src="./ch_10_to_14/task2.js"></script> -->
-    <script src="./ch_15_16_17/task1.js"></script>
+    <script src="./ch_18_19_20/task.js"></script>
 </head>
 
 <body>
