--- a/JavaScript_Assignment/index.html
+++ b/JavaScript_Assignment/index.html
@@ -14,7 +14,8 @@
     <!-- <script src="./ch_15_16_17/task.js"></script> -->
     <!-- <script src="./ch_18_19_20/task.js"></script> -->
     <!-- <script src="./ch_21_30/task1.js"></script> -->
-    <script src="./ch_21_30/task2.js"></script>
+    <!-- <script src="./ch_21_30/task2.js"></script> -->
+    <script src="./ch_31_34/task.js"></script>
 </head>
 
 <body>
