--- a/CSS_Assignment/Final_Assignment_of_CSS/index.html
+++ b/CSS_Assignment/Final_Assignment_of_CSS/index.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pana Cloud</title>
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+        integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+        crossorigin="anonymous" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <header></header>
+    <div id="container">
+        <div id="contact">
+            <div id="contLogo">
+                <ul>
+                    <li><i class="fab fa-facebook-f"></i></li>
+                    <li><i class="fab fa-twitter-square"></i></li>
+                    <li><i class="fab fa-google-plus-g"></i></li>
+                    <li><i class="fab fa-linkedin"></i></li>
+                    <li><i class="fab fa-youtube-square"></i></li>
+                </ul>
+            </div>
+            <div id="contNumber">
+                <ul id="contNumber">
+                    <li><input type="button" value="CALL ME BACK"></li>
+                    <li><i class="fas fa-phone"></i>+92(317)011-3001</li>
+                    <li><i class="fas fa-phone"></i>+92(304)386-6719</li>
+                </ul>
+            </div>
+        </div>
+        <header>
+
+        </header>
+    </div>
 </body>
+
 </html>
