--- a/CSS_Assignment/Final_Assignment_of_CSS/index.html
+++ b/CSS_Assignment/Final_Assignment_of_CSS/index.html
@@ -15,27 +15,27 @@
 
 <body>
     <div id="container">
-        <div id="contact">
-            <div id="contLogo">
-                <ul>
-                    <li><i class="fab fa-facebook-f"></i></li>
-                    <li><i class="fab fa-twitter-square"></i></li>
-                    <li><i class="fab fa-google-plus-g"></i></li>
-                    <li><i class="fab fa-linkedin"></i></li>
-                    <li><i class="fab fa-youtube-square"></i></li>
-                </ul>
-            </div>
-            <div id="contNumber">
-                <ul id="contNumber">
-                    <li><input type="button" value="CALL ME BACK"></li>
-                    <li><i class="fas fa-phone"></i>+92(317)011-3001</li>
-                    <li><i class="fas fa-phone"></i>+92(304)386-6719</li>
-                </ul>
-            </div>
-        </div>
-        <header>
 
-        </header>
+        <div id="contact">
+
+            <ul id="contLogo">
+                <li><i class="fab fa-facebook-f"></i></li>
+                <li><i class="fab fa-twitter-square"></i></li>
+                <li><i class="fab fa-google-plus-g"></i></li>
+                <li><i class="fab fa-linkedin"></i></li>
+                <li><i class="fab fa-youtube-square"></i></li>
+            </ul>
+
+
+            <ul id="contNumber">
+                <li><input type="button" value="CALL ME BACK"></li>
+                <li><i class="fas fa-phone"></i>+92(317)011-3001</li>
+                <li><i class="fas fa-phone"></i>+92(304)386-6719</li>
+            </ul>
+
+        </div>
+
+        
     </div>
 </body>
 
