--- a/JavaScript_Assignment/index.html
+++ b/JavaScript_Assignment/index.html
@@ -15,7 +15,9 @@
     <!-- <script src="./ch_18_19_20/task.js"></script> -->
     <!-- <script src="./ch_21_30/task1.js"></script> -->
     <!-- <script src="./ch_21_30/task2.js"></script> -->
-    <script src="./ch_31_34/task.js"></script>
+    <!-- <script src="./ch_31_34/task.js"></script> -->
+    <!-- <script src="./ch_35_38/task1.js"></script> -->
+    <script src="./ch_35_38/task2.js"></script>
 </head>
 
 <body>
