--- a/JavaScript_Assignment/index.html
+++ b/JavaScript_Assignment/index.html
@@ -17,7 +17,8 @@
     <!-- <script src="./ch_21_30/task2.js"></script> -->
     <!-- <script src="./ch_31_34/task.js"></script> -->
     <!-- <script src="./ch_35_38/task1.js"></script> -->
-    <script src="./ch_35_38/task2.js"></script>
+    <!-- <script src="./ch_35_38/task2.js"></script> -->
+    <script src="./ch_39_42/task.js"></script>
 </head>
 
 <body>
